# TextQuestEngine

./: README.md  index-ita.html  index.html  pyproject.toml  setup.py
demo_adventure/: README.md
demo_adventure/config/: items.json  world.yaml
demo_adventure/plugins/: light_plugin.py
demo_adventure/src/: main.py
engine/core/: cli_commands.py  dispatcher.py  game.py  parser.py
engine/data/: loader.py  models.py
engine/plugins/: dialogue_plugin.py
engine/utils/: cli.py  io_helpers.py
ita/: README.MD
plugins/: base.py
src/: main.py
tests/integration/: test_game_loop.py
unit/: test_dispatcher.py  test_parser.py
